Recrated entire project just before Ch. 8.24 (adding the SDWebImag)

--- a/Snacktacular/Info.plist
+++ b/Snacktacular/Info.plist
@@ -16,6 +16,17 @@
 	<string>$(PRODUCT_BUNDLE_PACKAGE_TYPE)</string>
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>com.googleusercontent.apps.164608820344-g046ij002uv96lstuault25aqfrj0k72</string>
+			</array>
+		</dict>
+	</array>
 	<key>CFBundleVersion</key>
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
@@ -47,6 +58,8 @@
 	<array>
 		<string>armv7</string>
 	</array>
+	<key>UIStatusBarStyle</key>
+	<string>UIStatusBarStyleLightContent</string>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
@@ -60,5 +73,15 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>UIViewControllerBasedStatusBarAppearance</key>
+	<false/>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>This app will need the device location in order to determine the distance from a spot to the device, and to plot the user&apos;s location on a map.</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>This app will need the device location in order to determine the distance from a spot to the device, and to plot the user&apos;s location on a map.</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Snacktacular will need access to your camrea if you&apos;d like to add a photo.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Snacktacular will need access to your camrea if you&apos;d like to add a photo.</string>
 </dict>
 </plist>
